--- a/Simon-Game-main/styles.css
+++ b/Simon-Game-main/styles.css
@@ -47,6 +47,9 @@ body {
   background-color: yellow;
 }
 
+.grey {
+  background-color: grey;
+}
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
